img fix and alignment

--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@ body {
 .intro {
     text-align: center;
 }
+.bgimg {
+    display: block;
+    margin: 0px auto;
+}
